[fix] main element overlap with navigation

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,1 +1,5 @@
 @import "./auth/auth";
+
+.wrapper {
+  margin-bottom: 80px;
+}
